# sinthlab-kuka-stack

./: CMakeLists.txt  LBRImpedanceTuner.java  README.md  package.xml  sinthlab_lbr_stack.repos
analysis/: plot_trajectory.py  record_trajectory.py
end_effector_design/: README.md  adj_shaft.stl  apple_ball.stl  apple_core.stl  apple_core_base.stl  apple_pluck_end_effector.scad  base.stl  cover.stl  extension.stl
kuka_bringup/: CMakeLists.txt  package.xml
kuka_bringup/launch/: iiwa7_gazebo_apple.launch.py  iiwa7_gazebo_apple_pluck.launch.py  iiwa7_gazebo_apple_scenario.launch.py  iiwa7_mock_apple.launch.py
kuka_bringup/scripts/: apple_pluck_controller.py  apple_puller.py
kuka_description/: CMakeLists.txt
kuka_description/urdf/iiwa7_apple/: iiwa7_apple.xacro
kuka_description/urdf/models/: apple.xacro
sinthlab_bringup/: CMakeLists.txt  package.xml
sinthlab_bringup/config/: admittance_tuning.yaml  apple_pluck_impedance.yaml  apple_pluck_impedance_perturb.yaml  custom_hardware_controllers.yaml  custom_ros2_controllers.yaml  iiwa7_hardware_controllers.yaml  iiwa7_system_config.yaml  maze_params.yaml  virtual_fixtures_params.yaml
sinthlab_bringup/helpers/: __init__.py  common_threshold.py
sinthlab_bringup/launch/: custom_hardware.launch.py  experiment_base.launch.py  hardware_apple_pluck.launch.py  iiwa7_admittance_tuning.launch.py  iiwa7_apple_pluck_control.launch.py  iiwa7_apple_pluck_impedance_control.launch.py  iiwa7_apple_pluck_impedance_perturb.launch.py  iiwa7_gazebo.launch.py  iiwa7_gazebo_apple.launch.py  iiwa7_gazebo_apple_pull.launch.py  iiwa7_hardware.launch.py  iiwa7_impedance_position.launch.py  iiwa7_maze.launch.py  iiwa7_mock.launch.py  iiwa7_mock_apple.launch.py  iiwa7_move_restricted_plane.launch.py  iiwa7_moveit_apple.launch.py
sinthlab_bringup/orchestrators/: apple_pluck_orchestrator.py  maze_orchestrator.py  perturb_orchestrator.py  restricted_plane_orchestrator.py
sinthlab_bringup/scripts/: admittance_control_mode.py  admittance_gains_gui.py  admittance_tuning.py  apple_pluck_control.py  apple_pluck_impedance_control.py  apple_pluck_impedance_control_displacement.py  apple_pluck_impedance_control_force.py  apple_pull_controller.py  audio_cue_play.py  force_torque_bias_calibrator.py  impedance_position_control.py  move_restricted_on_a_plane.py  move_to_start.py  perturb_start.py
sinthlab_bringup/scripts/actions/: admittance_controller.py  audio_cue.py  cartesian_impedance_displacement_monitor.py  force_torque_bias.py  move_to_position.py
sinthlab_bringup/scripts/helpers/: common_threshold.py  param_logging.py
sinthlab_bringup/sinthlab_bringup/actions/: _move_action_base.py  audio_cue.py  cartesian_impedance_displacement_monitor.py  checkpoint_monitor.py  force_release_waiter.py  force_torque_bias.py  freeze_at_pose.py  move_restricted_on_a_plane.py  move_to_position.py  move_to_position_cartesian_space.py  move_to_position_joint_space.py  perturb_initial_position.py  spring_release.py  switch_controller.py  trajectory_recorder.py  wait_action.py
sinthlab_bringup/sinthlab_bringup/helpers/: __init__.py  common_threshold.py
sinthlab_description/: CMakeLists.txt  package.xml
sinthlab_description/ros2_control/: initial_joint_positions_down.yaml
sinthlab_description/urdf/iiwa7_apple/: iiwa7_apple.xacro
sinthlab_description/urdf/models/: apple.xacro
sunrise_controller_code/: LBRImpedanceTuner.java  LBRServer.java  LbrImpedanceControlServer.java
sunrise_workbench/: README.md
vendored_controllers/: README.md
vendored_controllers/cartesian_impedance_controller/: README.md
vendored_controllers/cartesian_impedance_controller/include/cartesian_impedance_controller/: cartesian_impedance_controller.h
vendored_controllers/cartesian_impedance_controller/src/: cartesian_impedance_controller.cpp  diosmios.cpp
vendored_controllers/controller_base/: CMakeLists.txt  README.md  package.xml
vendored_controllers/controller_base/include/controller_base/: controller_base.h
vendored_controllers/controller_base/src/: controller_base.cpp
vendored_controllers/effort_controller_base/include/effort_controller_base/: effort_controller_base.h
vendored_controllers/effort_controller_base/src/: effort_controller_base.cpp
vendored_controllers/kuka_clik_controller/: CMakeLists.txt  kuka_clik_controller_plugin.xml  package.xml
vendored_controllers/kuka_clik_controller/include/kuka_clik_controller/: kuka_clik_controller.h
vendored_controllers/kuka_clik_controller/src/: kuka_clik_controller.cpp
