<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sinthlab_lbr_description</name>
  <version>1.0.0</version>
  <description>KUKA LBR description files specific to sinth lab experiments</description>
  <maintainer email="nmodi5@alumni.jhu.edu">nmmodi5</maintainer>
  <license>Internal use only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
