<?xml version="1.0"?>
<package format="3">
  <name>kuka_bringup</name>
  <version>1.0.0</version>
  <description>Custom bringup launch files for KUKA iiwa7 with apple.</description>
  <maintainer email="nmodi5@alumni.jh.edu">Navin Modi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lbr_bringup</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>